新增:文件压缩分片功能