@@ -2,17 +2,15 @@ package com.reine.utils;
 
 import com.reine.properties.Profile;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import net.lingala.zip4j.ZipFile;
 import net.lingala.zip4j.model.ZipParameters;
 import net.lingala.zip4j.model.enums.AesKeyStrength;
 import net.lingala.zip4j.model.enums.EncryptionMethod;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URI;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
@@ -26,8 +24,8 @@ import java.util.List;
  */
 @RequiredArgsConstructor
 @Component
+@Slf4j
 public class Compress {
-    private static final Logger log = LoggerFactory.getLogger(Compress.class);
     private final Profile profile;
 
     private static void getAllFiles(File fileInput, List<File> allFileList) {
@@ -46,74 +44,48 @@ public class Compress {
         }
     }
 
-    private boolean packageToZip(String zipName, URI sourceFolder, String passWord, EncryptionMethod encryptionMethod, AesKeyStrength aesKeyStrength, int splitSize) {
+    public boolean packageToZip(String zipName, Path sourceFolder, String passWord, EncryptionMethod encryptionMethod, AesKeyStrength aesKeyStrength, int splitSize) throws IOException {
         log.info("开始压缩");
-        log.info("source文件夹: {} , password:{} , 加密方法：{},AesKeyStrength:{}", sourceFolder, passWord, encryptionMethod.name(), aesKeyStrength.name());
-
+        log.info("源文件夹: {} , 密码:{} , 加密方法：{},AES 的强度:{}", sourceFolder.toFile().getAbsolutePath(), passWord, encryptionMethod.name(), aesKeyStrength.name());
         var zip = new ZipParameters();
         zip.setEncryptFiles(encryptionMethod != EncryptionMethod.NONE);
         zip.setEncryptionMethod(encryptionMethod);
-
         zip.setAesKeyStrength(aesKeyStrength);
-
         zip.setDefaultFolderPath(profile.getRootDir());
-        try (var zipFile = new ZipFile(zipName, passWord.toCharArray())) {
-            List<File> allFileList = new ArrayList<>();
-            getAllFiles(new File(sourceFolder), allFileList);
-
-            if (splitSize != 0)
-                zipFile.createSplitZipFile(allFileList, zip, true, splitSize * 1048576L);
-            else zipFile.addFiles(allFileList, zip);
-            log.info("压缩完成,path:{},size:{},分片数量:{}", zipFile.getFile().getAbsolutePath(), (zipFile.getFile().length() + (1024 * 1024) * zipFile.getSplitZipFiles().size() - 1) + "KB", zipFile.getSplitZipFiles().size());
-        } catch (Exception IOException) {
-            log.error("压缩失败", IOException);
-        }
-        // throw new UnsupportedOperationException();
+        var zipFile = new ZipFile(zipName, passWord.toCharArray());
+        List<File> allFileList = new ArrayList<>();
+        getAllFiles(sourceFolder.toFile(), allFileList);
+        if (splitSize != 0)
+            zipFile.createSplitZipFile(allFileList, zip, true, splitSize * 1048576L);
+        else zipFile.addFiles(allFileList, zip);
+        log.info("压缩完成,路径:{},大小:{},分片数量:{}", zipFile.getFile().getAbsolutePath(), (zipFile.getFile().length() + (1024 * 1024) * zipFile.getSplitZipFiles().size() - 1) + "KB", zipFile.getSplitZipFiles().size());
+        zipFile.close();
         return true;
     }
 
-    public boolean packageToZip(String name) {
+    public boolean packageToZip(String name) throws IOException {
         var em = EncryptionMethod.NONE;
         AesKeyStrength aesKeyStrength = AesKeyStrength.KEY_STRENGTH_128;
         if (!profile.getPassword().isEmpty()) {
-            switch (profile.getEncryptionMethod()) {
-                case 0:
-                    break;
-                case 1:
-                    em = EncryptionMethod.ZIP_STANDARD;
-                    break;
-                case 2:
-                    em = EncryptionMethod.ZIP_STANDARD_VARIANT_STRONG;
-                    break;
-                case 3:
-                    em = EncryptionMethod.AES;
-                    break;
-                case 4:
-                    em = EncryptionMethod.AES;
+
+            em = switch (profile.getEncryptionMethod()) {
+                case 1 -> EncryptionMethod.ZIP_STANDARD;
+                case 2 -> EncryptionMethod.ZIP_STANDARD_VARIANT_STRONG;
+                case 3 -> EncryptionMethod.AES;
+                case 4 -> {
                     aesKeyStrength = AesKeyStrength.KEY_STRENGTH_192;
-                    break;
-                case 5:
-                    em = EncryptionMethod.AES;
+                    yield EncryptionMethod.AES;
+                }
+                case 5 -> {
                     aesKeyStrength = AesKeyStrength.KEY_STRENGTH_256;
-                    break;
-            }
+                    yield EncryptionMethod.AES;
+                }
+                default -> throw new IllegalStateException("Unexpected value: " + profile.getEncryptionMethod());
+            };
         }
-        if (!new File(getFolder("", profile.getCompressDir()).getPath()).exists()) {
-            try {
-                Files.createDirectories(Path.of(getFolder("", profile.getCompressDir())));
-            } catch (IOException e) {
-                log.error("Error creating directory", e);
-                throw new RuntimeException(e);
-            }
-        }
-        return packageToZip(getFolder(name + ".zip", profile.getCompressDir()).getPath(), getFolder(name, profile.getRootDir()), profile.getPassword(), em, aesKeyStrength, profile.getCompressSplitSize());
-    }
+                Files.createDirectories(Paths.get("", profile.getCompressDir()));
 
-    private URI getFolder(String name, String dir) {
-        return
-                Paths.get(System.getProperty("user.dir"), dir, name).toUri();
-
-
+        return packageToZip(Paths.get(profile.getCompressDir(), name + ".zip").toString(), Paths.get(name, profile.getRootDir()), profile.getPassword(), em, aesKeyStrength, profile.getCompressSplitSize());
     }
 }
 
